updated-2 index.html

--- a/src/index.html
+++ b/src/index.html
@@ -13,5 +13,11 @@
       <h1>committed</h1>
       <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequuntur quidem laborum rerum quibusdam repellat et sint eaque illo. Voluptatum, sequi? Quidem cumque magni consectetur labore fugiat laudantium odit sequi sit.</p>
     </h1>
+    <p>
+      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dicta quaerat modi provident natus laborum eveniet culpa esse et veniam inventore itaque nemo voluptatum, error rem quasi nam quas aperiam deleniti.
+    </p>
+    <h1>
+      New commit
+    </h1>
   </body>
 </html>
